--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.4.1"
   },
   "husky": {
     "hooks": {
