--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-n": "^16.0.2",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "js-cookie": "^3.0.5",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
     "pretty-quick": "^3.1.3",
